--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,15 @@ dependencyResolutionManagement {
         maven { url 'https://jitpack.io' }
     }
 }
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
 rootProject.name = "SimpleBleScanner"
 include ':app'
