--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
     implementation 'com.github.lorenzofelletti:permissions:0.5.0'
     implementation 'androidx.activity:activity:1.9.3'
+    implementation 'androidx.compose.ui:ui-desktop:1.7.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
