--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".DeviceActivity"
             android:exported="false" />
         <activity
-            android:name=".SecondActivity"
+            android:name=".GraphActivity"
             android:exported="false"
             android:label="@string/title_activity_second_activitity" />
         <activity
