--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,18 +36,16 @@ android {
 
 
 dependencies {
-
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
     implementation 'com.github.lorenzofelletti:permissions:0.5.0'
     implementation 'androidx.activity:activity:1.9.3'
     implementation 'androidx.compose.ui:ui-desktop:1.7.0'
-
+    implementation 'androidx.datastore:datastore-core-android:1.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
